v1.7.1

new:
- 'Find Todo' command now accept comma-separated text for searching by tags, regexp accepted.
- 'Find Todo' command searches for all matches.

fix:
- in-progress highlight color changed to remove cursor slowdown


v1.7.0

new:
- Doplet highlighting in code. Could slow down if lot of doplets in one file, issue to be fixed.
- Basic consistency check at startup: doplets that are not equal to those in dbase are highlited red. NOTHING is changed in code, its all up to user. '.do' file contain dbase-version of record, so you can hop using (alt+shift+d) to see differense.
  Notice, that any edit of inconsistent doplet will overwrite new version into dbase.
- 'Toggle Colorize' command added which stores it state.

fix:
- Fixed unstable focusing at 'Find todo' command.
- Canceling doplets with reason failed. Fixed.
- (alt-d) shortcut more strictly restricted to doplet
- Entering blank reason when calceling leave doplet comment unchanged

change:
- No more deleting line itself when calceling doplet, only content is removed.


v1.6.5

new:
- Doplet is created as snippets with 3 tabs: Tag, Priority and Comment.
- Restrict doplet editing if selection range is other than Tags, Priority and Comment blocks.
- Added "+/-" shortcut when over Priority to change it

fix:
- Previously Undo was implicitly altered so it took in account every changed character instead of word. This is no more issue.


v1.6.3

new:
- 'Find todo' command added and binded to <alt+shift+d>. It is used to navigate through Todos, acting flexible depending on context:
  * When cursor is at Todo line, then '.do' file is searched for record and it gets focus;
  * When cursor is over Todo in '.do' file, project files are searched for that Todo and it gets focus;
  * If neither, text input is offered to find Todo by its number.


v1.6.2

new:
- SetState (alt+d) default state depends on current state (open > inprogress > close)

fix:
- Patched 'idna' encoding error sometimes shown up