@@ -12,5 +12,6 @@
 	"1.6.2": "messages/1.6.2.txt",
 	"1.6.3": "messages/1.6.3.txt",
 	"1.6.5": "messages/1.6.5.txt",
-	"1.7.0": "messages/1.7.0.txt"
+	"1.7.0": "messages/1.7.0.txt",
+	"1.7.1": "messages/1.7.1.txt"
 }
