@@ -1,0 +1,10 @@
+v1.7.1
+
+new:
+- 'Find Todo' command now accept comma-separated text for searching by tags, regexp accepted.
+- 'Find Todo' command searches for all matches.
+
+fix:
+- in-progress highlight color changed to remove cursor slowdown
+- fix unstable consistency check
+
